# mudmagic-client

./: ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  debug  description-pak  gmon.out  libtool  mudmagic  mudmagic.in  mudmagic.pc  mudmagic.pc.in  mudmagic.spec  mudmagic.spec.in  reconf  win32mud.h  wincompile.txt
CVS/: Entries  Repository
bundled/: .cvsignore  Makefile  Makefile.am  Makefile.in
bundled/.deps/: alter.Plo  analyze.Plo  attach.Plo  auth.Plo  base64.Plo  btree.Plo  build.Plo  callback.Plo  celementmanager.Plo  centitymanager.Plo  cmxpcolors.Plo  cmxpparser.Plo  cmxpprocessor.Plo  cmxpstate.Plo  complete.Plo  connect.Plo  content_encoding.Plo  cookie.Plo  cresulthandler.Plo  curl_hash.Plo  curl_select.Plo  date.Plo  delete.Plo  dict.Plo  easy.Plo  escape.Plo  expr.Plo  file.Plo  formdata.Plo  ftp.Plo  func.Plo  get.Plo  getenv.Plo  getinfo.Plo  glade-gtk.Plo  glade-init.Plo  glade-parser.Plo  glade-xml.Plo  gtls.Plo  hash.Plo  (+67 more)
bundled/CVS/: Entries  Repository
bundled/curl/: arpa_telnet.h  base64.c  base64.h  config.h  connect.c  connect.h  content_encoding.c  content_encoding.h  cookie.c  cookie.h  curl.h  curl_hash.c  curl_select.c  curlver.h  curlx.h  dict.c  dict.h  easy.c  easy.h  easyif.h  escape.c  escape.h  file.c  file.h  formdata.c  formdata.h  ftp.c  ftp.h  getenv.c  getinfo.c  getinfo.h  gtls.c  gtls.h  hash.h  hostares.c  hostasyn.c  hostip.c  hostip.h  hostip4.c  hostip6.c  (+73 more)
bundled/curl/CVS/: Entries  Repository
bundled/curl/curl/: curl.h
bundled/curl/curl/CVS/: Entries  Repository
bundled/libglade/: README  glade-build.h  glade-gtk.c  glade-init.c  glade-parser.c  glade-parser.h  glade-private.h  glade-xml.c  glade-xml.h
bundled/libglade/CVS/: Entries  Repository
bundled/libglade/glade/: glade.h
bundled/libglade/glade/CVS/: Entries  Repository
bundled/libglade/win32/CVS/: Repository
bundled/libglade/win32/lib/: libglade-2.0.lib
bundled/libmxp/: README.usage  celementmanager.cpp  cmxpstate.cpp  colorlist.h
bundled/libmxp/CVS/: Entries  Repository
bundled/libmxp/win32/: Makefile.win  libmxp.def
bundled/libmxp/win32/CVS/: Entries  Repository
bundled/pcre/: Makefile  RunTest  config.status  configure_help.txt  dftables  internal.h  libtool  makefile.mingw  mkinstalldirs  pcre-config  pcre.h  pcre.rc  pcregrep.rc  pcreposix.rc  pcretest.rc
bundled/pcre/CVS/: Entries  Repository
bundled/pcre/win32/: Makefile.win
bundled/pcre/win32/CVS/: Entries  Repository
bundled/sqlite3/: alter.c  analyze.c  attach.c  auth.c  btree.c  btree.h  build.c  callback.c  complete.c  date.c  delete.c  expr.c  func.c  hash.c  hash.h  insert.c  legacy.c  main.c  pager.c  pager.h  parse.y  pragma.c  prepare.c  random.c  select.c  shell.c  sqlite3.h  sqliteInt.h  tokenize.c  update.c  utf.c  util.c  vacuum.c  vdbe.c  vdbe.h  where.c
bundled/sqlite3/CVS/: Entries  Repository
bundled/zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
bundled/zlib/CVS/: Entries  Repository
bundled/zlib/amiga/CVS/: Repository
bundled/zlib/as400/CVS/: Repository
interface/: Makefile  Makefile.am  Makefile.in  automapper.glade  background.xpm  database.glade  interface.glade  interface.gladep  mudmagic.desktop  mudmagic.xpm  mudmagic2.xpm  notes.glade  s_wizard.xpm  wizard.xpm  xs_wizard.xpm
interface/CVS/: Entries  Repository
interface/doc/: alias.html  configuration.html  connecting.html  developers.html  explain.html  index.html  introduction.html  license.txt  macintosh.txt  macros.html  mudmagic.html  mudmagic_scripting.html  nav.html  python_scripting.html  readme.txt  triggers.html  wincompile.txt
interface/doc/CVS/: Entries  Repository
interface/pixmaps/CVS/: Entries  Repository
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  Makefile.win
src/.deps/: alias_triggers.Plo  automapper.Plo  cmdentry.Plo  configuration.Plo  data.Plo  database.Plo  debug.Plo  directories.Plo  gamelist.Plo  gauges.Plo  http.Plo  interface.Plo  internal.Plo  iscript.Plo  log.Plo  main.Po  module.Plo  modules.Plo  msp.Plo  mudaccel.Plo  muderr.Plo  mxp.Plo  network.Plo  notes.Plo  owindows.Plo  proxy.Plo  recorder.Plo  script.Plo  sessions.Plo  settings.Plo  statusvars.Plo  strings.Plo  telnet.Plo  theme_select.Plo  tools.Plo  utils.Plo  variables.Plo  website.Plo  zmp-core.Plo  zmp-manage.Plo
src/CVS/: Entries  Repository
src/configuration/: configuration.c  configuration.h
src/configuration/CVS/: Entries  Repository
src/interface/: callbacks.h  cmdentry.c  cmdentry.h  data.c  interface.c  interface.h  internal.c  modules.c  sessions.c  sessions.h  settings.c  theme_select.c  theme_select.h  tools.c  tools.h
src/interface/CVS/: Entries  Repository  Root
src/log/: debug.c  debug.h  log.c  log.h
src/log/CVS/: Entries  Repository
src/main/: Makefile.win  main.c  mudmagic.h  mudmagic.rc
src/main/CVS/: Entries  Repository
src/module/: module.c  module.h
src/module/CVS/: Entries  Repository
src/modules/: automapper.c  automapper.h  database.c  database.h  modules.h  notes.c  notes.h  recorder.c
src/modules/CVS/: Entries  Repository
src/network/: network.c  network.h  proxy.c  proxy.h
src/network/CVS/: Entries  Repository
src/plugin/CVS/: Repository
src/plugins/CVS/: Repository
src/protocols/: http.c  http.h  msp.c  msp.h  mxp.c  mxp.h  protocols.h  telnet.c  telnet.h  zmp-core.c  zmp-manage.c  zmp.h
src/protocols/CVS/: Entries  Repository
src/script/: iscript.c  iscript.h  script.c  script.h
src/script/CVS/: Entries  Repository
src/utils/: alias_triggers.c  alias_triggers.h  directories.c  directories.h  gamelist.c  gamelist.h  gauges.c  gauges.h  mudaccel.c  mudaccel.h  muderr.c  muderr.h  owindows.c  owindows.h  statusvars.c  statusvars.h  strings.c  strings.h  utils.c  utils.h  variables.c  variables.h
src/utils/CVS/: Entries  Repository
src/website/: website.c  website.h
src/website/CVS/: Entries  Repository
(+52 files in other folders)
